Fixed background wrapping issues.

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,18 @@
-body {
+* {
+    padding: 0;
+    margin: 0;
+}
+
+html, body {
     height: 100%;
     width: 100%;
+}
+
+body {
     font-family: 'PT Sans';
     font-weight: normal;
-    /* background-position: center center; */
-    /* background-repeat: no-repeat; */
+    background-position: bottom;
+    background-repeat: no-repeat;
     background-size: cover;
 }
 
